--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2.2'
 services:
   kibana:
     image: docker.elastic.co/kibana/kibana:7.6.0
+    container_name: kibana
     volumes:
       - "./kibana.yml:/usr/share/kibana/config/kibana.yml"
     restart: always
@@ -13,6 +14,7 @@ services:
       - elasticsearch
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.6.0
+    container_name: elasticsearch
     environment:
       - node.name=elasticsearch
       - cluster.name=es-docker-cluster
@@ -31,6 +33,7 @@ services:
       - "9200:9200"
   logstash:
     image: docker.elastic.co/logstash/logstash:7.6.0
+    container_name: logstash
     volumes:
       - "./logstash.conf:/config-dir/logstash.conf"
     restart: always
@@ -41,9 +44,11 @@ services:
     links:
       - elasticsearch
       - kafka
-      - kafka2
   kafka:
     image: wurstmeister/kafka
+    container_name: kafka
+    volumes:
+      - "./kafkaData:/kafka"
     depends_on:
       - zoo1
       - zoo2
@@ -56,34 +61,15 @@ services:
       - "9092:9092"
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ADVERTISED_HOST_NAME: 100.65.100.62
+      KAFKA_ADVERTISED_HOST_NAME: pony.local
       KAFKA_ADVERTISED_PORT: 9092
       KAFKA_LOG_RETENTION_HOURS: "168"
       KAFKA_LOG_RETENTION_BYTES: "100000000"
       KAFKA_ZOOKEEPER_CONNECT:  zoo1:2181,zoo2:2181,zoo3:2181
-      KAFKA_CREATE_TOPICS: "test-bank-log:3:3"
-  kafka2:
-    image: wurstmeister/kafka
-    depends_on:
-      - zoo1
-      - zoo2
-      - zoo3
-    links:
-      - zoo1
-      - zoo2
-      - zoo3
-    ports:
-      - "9093:9092"
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ADVERTISED_HOST_NAME: 100.65.100.62
-      KAFKA_ADVERTISED_PORT: 9092
-      KAFKA_LOG_RETENTION_HOURS: "168"
-      KAFKA_LOG_RETENTION_BYTES: "100000000"
-      KAFKA_ZOOKEEPER_CONNECT:  zoo1:2181,zoo2:2181,zoo3:2181
-      KAFKA_CREATE_TOPICS: "test-bank-log:3:3"
+      KAFKA_CREATE_TOPICS: "scb-log:3:3"
   zoo1:
     image: elevy/zookeeper:latest
+    container_name: zookeeper_1
     environment:
       MYID: 1
       SERVERS: zoo1,zoo2,zoo3
@@ -91,6 +77,7 @@ services:
       - "2181:2181"
   zoo2:
     image: elevy/zookeeper:latest
+    container_name: zookeeper_2
     environment:
       MYID: 2
       SERVERS: zoo1,zoo2,zoo3
@@ -98,6 +85,7 @@ services:
       - "2182:2181"
   zoo3:
     image: elevy/zookeeper:latest
+    container_name: zookeeper_3
     environment:
       MYID: 3
       SERVERS: zoo1,zoo2,zoo3
