--- a/logstash.conf
+++ b/logstash.conf
@@ -1,13 +1,13 @@
 input {
     kafka {
       bootstrap_servers => "kafka:9092"
-      topics => ["test-bank-log"]
+      topics => ["scb-log"]
     }
 }
 
 output {
    elasticsearch {
       hosts => ["elasticsearch:9200"]
-      index => "kafka-log-test"
+      index => "scb-log-test"
     }
 }
