--- a/logstash.conf
+++ b/logstash.conf
@@ -1,13 +1,13 @@
 input {
     kafka {
-      bootstrap_servers => "kafka:9092"
+      bootstrap_servers => "pony.local:9092"
       topics => ["scb-log"]
     }
 }
 
 output {
    elasticsearch {
-      hosts => ["elasticsearch:9200"]
+      hosts => ["pony.local:9200"]
       index => "scb-log-test"
     }
 }
