--- a/logstash.conf
+++ b/logstash.conf
@@ -7,7 +7,7 @@ input {
 
 output {
    elasticsearch {
-      hosts => ["pony.local:9200"]
+      hosts => ["elasticsearch:9200"]
       index => "scb-log-test"
     }
 }
