--- a/logstash.conf
+++ b/logstash.conf
@@ -1,13 +1,20 @@
 input {
     kafka {
       bootstrap_servers => "pony.local:9092"
-      topics => ["scb-log"]
+      topics => ["scb-log", "audit_logs_local"]
     }
 }
 
 output {
-   elasticsearch {
+   if [@metadata][kafka][topic] == "audit_logs_local" {
+     elasticsearch {
       hosts => ["elasticsearch:9200"]
-      index => "scb-log-test"
+      index => "scb_auditlogs_local"
     }
+   } else {
+    elasticsearch {
+      hosts => ["elasticsearch:9200"]
+      index => "scb_logs_local"
+   }
+   
 }
