--- a/logstash-config/logstash_1.conf
+++ b/logstash-config/logstash_1.conf
@@ -1,39 +1,21 @@
 input {
-    kafka {
-      bootstrap_servers => "pony.local:9092"
-      topics => ["audit-logs-local"]
-      group_id => "newlog"
-      consumer_threads => 1
-      client_id => "newlog"
-      codec => "json"
-    }
+  kafka {
+    bootstrap_servers => "pony.local:9092"
+    topics => ["local-portal-admin-service-logs"]
+    group_id => "newlog"
+    consumer_threads => 1
+    client_id => "newlog"
+    codec => "json"
   }
-  
-  filter {
-    if [message] !~ "AA[0-9]*|CA[0-9]*" {
-  }
-  json {
-    source => "message"
-  target => "event"   
-  }
+}
 
-  mutate {
-    add_field => {
-      "eventId"      => "%{[event][id]}"
-      "eventCode"    => "%{[event][eventCode]}"
-      "scbConnectId"  => "%{[event][scbConnectId]}"
-      "lineUserId"   => "%{[event][lineUserId]}"
-      "createdAt"   => "%{[event][createdAt]}"
-    }
-    remove_field => [ "json", "event" ]
-  }
-} 
-
-  output {
-    if [type] == "downstream" {
-      elasticsearch {
-        hosts => ["elasticsearch:9200"]
-        index => "scb_audit-logs-local-%{+YYYY-MM-dd}"
-      }
+output {
+  if [app] == "audit-logs-local" {
+    elasticsearch {
+      hosts => ["pony.local:9200"]
+      index => "scb_audit-logs-local-%{+YYYY-MM-dd}"
+#      user => logstashuser
+#      password => logstashpassword
     }
   }
+}
