--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.6.0
     container_name: elasticsearch
+    restart: always
     environment:
       - node.name=elasticsearch
       - cluster.name=es-docker-cluster
@@ -46,6 +47,7 @@ services:
   kafka:
     image: wurstmeister/kafka
     container_name: kafka
+    restart: always
     volumes:
       - "/Users/pony/kafkaData:/kafka"
     depends_on:
@@ -66,6 +68,7 @@ services:
   zoo1:
     image: elevy/zookeeper:latest
     container_name: zookeeper_1
+    restart: always
     environment:
       MYID: 1
       SERVERS: zoo1
