--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
         hard: -1
     mem_limit: 1g
     volumes:
-      - "/Users/pony/esdata:/usr/share/elasticsearch/data"
+      - "$HOME/esdata:/usr/share/elasticsearch/data"
     ports:
       - "9200:9200"
   logstash:
@@ -49,7 +49,7 @@ services:
     container_name: kafka
     restart: always
     volumes:
-      - "/Users/pony/kafkaData:/kafka"
+      - "$HOME/kafkaData:/kafka"
     depends_on:
       - zoo1
     links:
@@ -58,7 +58,7 @@ services:
       - "9092:9092"
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ADVERTISED_HOST_NAME: pony.local
+      KAFKA_ADVERTISED_HOST_NAME: localhost
       KAFKA_ADVERTISED_PORT: 9092
       KAFKA_LOG_RETENTION_HOURS: "168"
       KAFKA_LOG_RETENTION_BYTES: "100000000"
