--- a/logstash-config/logstash_1.conf
+++ b/logstash-config/logstash_1.conf
@@ -1,6 +1,6 @@
 input {
   kafka {
-    bootstrap_servers => "pony.local:9092"
+    bootstrap_servers => "localhost:9092"
     topics => ["local-portal-admin-service-logs"]
     group_id => "newlog"
     consumer_threads => 1
@@ -12,7 +12,7 @@ input {
 output {
   if [app] == "audit-logs-local" {
     elasticsearch {
-      hosts => ["pony.local:9200"]
+      hosts => ["localhost:9200"]
       index => "scb_audit-logs-local-%{+YYYY-MM-dd}"
 #      user => logstashuser
 #      password => logstashpassword
