--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     volumes:
       - "./kibana.yml:/usr/share/kibana/config/kibana.yml"
     restart: always
+    mem_limit: 1g
     ports:
       - "5601:5601"
     links:
@@ -38,6 +39,7 @@ services:
     volumes:
       - "./logstash-config/:/usr/share/logstash/pipeline"
     restart: always
+    mem_limit: 1g
     ports:
       - "9600:9600"
       - "7777:7777"
@@ -48,6 +50,7 @@ services:
     image: wurstmeister/kafka
     container_name: kafka
     restart: always
+    mem_limit: 1g
     volumes:
       - "$HOME/kafkaData:/kafka"
     depends_on:
@@ -69,6 +72,7 @@ services:
     image: elevy/zookeeper:latest
     container_name: zookeeper_1
     restart: always
+    mem_limit: 1g
     environment:
       MYID: 1
       SERVERS: zoo1
