--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,10 +3,10 @@ services:
   kibana:
     image: docker.elastic.co/kibana/kibana:6.6.2
     container_name: kibana
+    mem_limit: 1g
     volumes:
       - "./kibana.yml:/usr/share/kibana/config/kibana.yml"
     restart: always
-    mem_limit: 1g
     ports:
       - "5601:5601"
     links:
@@ -47,8 +47,8 @@ services:
   kafka:
     image: wurstmeister/kafka
     container_name: kafka
-    restart: always
     mem_limit: 1g
+    restart: always
     volumes:
       - "$HOME/kafkaData:/kafka"
     depends_on:
@@ -59,7 +59,7 @@ services:
       - "9092:9092"
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ADVERTISED_HOST_NAME: SCBPN900881
+      KAFKA_ADVERTISED_HOST_NAME: SCBPN900801.local
       KAFKA_ADVERTISED_PORT: 9092
       KAFKA_LOG_RETENTION_HOURS: "168"
       KAFKA_LOG_RETENTION_BYTES: "100000000"
@@ -70,7 +70,7 @@ services:
     image: elevy/zookeeper:latest
     container_name: zookeeper_1
     restart: always
-    mem_limit: 1g 
+    mem_limit: 1g
     environment:
       MYID: 1
       SERVERS: zoo1
