--- a/logstash-config/logstash.conf
+++ b/logstash-config/logstash.conf
@@ -2,6 +2,9 @@ input {
   kafka {
     bootstrap_servers => "SCBPN900881.local:9092"
     topics => ["local-portal-admin-service-logs"]
+    group_id => "newlog"
+    consumer_threads => 1
+    client_id => "newlog"
     codec => "json"
   }
 }
@@ -9,10 +12,8 @@ input {
 output {
   if [app] == "audit-logs-local" {
     elasticsearch {
-      hosts => ["elasticsearch:9200"]
-      index => "scb_audit-logs-local-%{+YYYY-MM-dd}"
-#      user => logstashuser
-#      password => logstashpassword
+      hosts => ["SCBPN900881.local:9200"]
+      index => "scb_audit-logs-local"
     }
   }
 }
