--- a/logstash-config/logstash.conf
+++ b/logstash-config/logstash.conf
@@ -1,6 +1,6 @@
 input {
   kafka {
-    bootstrap_servers => "SCBPN900881.local:9092"
+    bootstrap_servers => "kafka:9092"
     topics => ["local-portal-admin-service-logs"]
     group_id => "newlog"
     consumer_threads => 1
@@ -12,7 +12,7 @@ input {
 output {
   if [app] == "audit-logs-local" {
     elasticsearch {
-      hosts => ["SCBPN900881.local:9200"]
+      hosts => ["elasticsearch:9200"]
       index => "scb_audit-logs-local"
     }
   }
