--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       - "9092:9092"
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ADVERTISED_HOST_NAME: SCBPN900881.local
+      KAFKA_ADVERTISED_HOST_NAME: scbpn900881.local
       KAFKA_ADVERTISED_PORT: 9092
       KAFKA_LOG_RETENTION_HOURS: "168"
       KAFKA_LOG_RETENTION_BYTES: "100000000"
@@ -68,5 +68,5 @@ services:
       - "9600:9600"
       - "7777:7777"
     links:
-      - elasticsearch:elasticsearch
-      - kafka:kafka
+      - elasticsearch
+      - kafka
